--- a/home.html
+++ b/home.html
@@ -3,9 +3,10 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
-  <title>FreshBid</title>
+  <title>FreshBid - Home</title>
+  <link rel="icon" href="icon.png" type="image/x-icon">
 </head>
 <body>
-  <h1>FreshBid</h1>
+  <h1 style="color: green;">FreshBid</h1>
 </body>
 </html>
