--- a/home.html
+++ b/home.html
@@ -23,9 +23,9 @@
           </button>
           <div class="collapse navbar-collapse flex justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">Features</a>
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
+              <a class="nav-link" href="./OnAuction.html">On Auction</a>
+              <a class="nav-link" href="#">Catalog</a>
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
             </div>
           </div>
