adding the card

--- a/OnAuction.html
+++ b/OnAuction.html
@@ -32,7 +32,38 @@
         </nav>
       </section>
       <section>
-        
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6"><h1 class="heading_auction">On Auction</h1></div>
+            <div class="col-md-2"></div>
+            <div class="col-md-2"></div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <div class="row">
+            <div class="col"></div>
+            <div class="col-md-8">
+              <div class="card mb-3" style="max-width: 700px;">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="..." class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam molestias neque officia. Id aliquid consectetur, enim esse necessitatibus vero, corrupti nostrum asperiores labore officia quasi optio in fugit ipsa ea?</p>
+                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                    <a href="#" class="btn btn-primary">More Detail</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+            <div class="col"></div>
+          </div>
+        </div>
       </section>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
