--- a/OnAuction.html
+++ b/OnAuction.html
@@ -31,8 +31,73 @@
           </div>
         </nav>
       </section>
-      <section>
-        
+      <section id="auction">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-8">
+              <h1 class="auction-title">On Auction:</h1>
+            </div>
+          </div>
+        </div>
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner d-flex justify-content-start">
+            <div class="carousel-item active">
+             <div class="container">
+              <div class="row">
+                <div class="col-md-8">
+                  <div class="card d-flex flex-row">
+                    <img src="./tomat.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, dignissimos itaque! Tempora, eum est sint sed minima maiores expedita voluptatum temporibus cum animi voluptatibus modi fuga veritatis doloremque suscipit magnam.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+              </div>
+             </div>
+            </div>
+            </div>
+            <div class="carousel-item">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-8">
+                    <div class="card d-flex flex-row">
+                      <img src="./tomat.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, dignissimos itaque! Tempora, eum est sint sed minima maiores expedita voluptatum temporibus cum animi voluptatibus modi fuga veritatis doloremque suscipit magnam.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                      </div>
+                  </div>
+                </div>
+               </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="card">
+                <img src="" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, dignissimos itaque! Tempora, eum est sint sed minima maiores expedita voluptatum temporibus cum animi voluptatibus modi fuga veritatis doloremque suscipit magnam.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
       </section>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
