--- a/OnAuction.html
+++ b/OnAuction.html
@@ -79,14 +79,20 @@
               </div>
             </div>
             <div class="carousel-item">
-              <div class="card">
-                <img src="" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, dignissimos itaque! Tempora, eum est sint sed minima maiores expedita voluptatum temporibus cum animi voluptatibus modi fuga veritatis doloremque suscipit magnam.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-8">
+                    <div class="card d-flex flex-row">
+                      <img src="./tomat.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, dignissimos itaque! Tempora, eum est sint sed minima maiores expedita voluptatum temporibus cum animi voluptatibus modi fuga veritatis doloremque suscipit magnam.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                      </div>
+                  </div>
                 </div>
-            </div>
+               </div>
+              </div>
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
