--- a/OnAuction.html
+++ b/OnAuction.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./OnAuction.css">
     <link rel="stylesheet" href="./home.css">
-    <title>FreshBid</title>
+    <title>On Auction</title>
     <body>
       <section>
         <nav class="navbar navbar-expand-lg">
@@ -31,7 +31,7 @@
           </div>
         </nav>
       </section>
-      <section id="auction">
+      <section>
         <div class="container">
           <div class="row">
             <div class="col-md-8">
@@ -55,7 +55,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Tomatoes</h5>
                       <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, dignissimos itaque! Tempora, eum est sint sed minima maiores expedita voluptatum temporibus cum animi voluptatibus modi fuga veritatis doloremque suscipit magnam.</p>
-                      <a href="#" class="btn">Go somewhere</a>
+                      <a href="./auction.html" class="btn">More details!</a>
                     </div>
                 </div>
               </div>
@@ -71,7 +71,7 @@
                       <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, dignissimos itaque! Tempora, eum est sint sed minima maiores expedita voluptatum temporibus cum animi voluptatibus modi fuga veritatis doloremque suscipit magnam.</p>
-                        <a href="#" class="btn">Go somewhere</a>
+                        <a href="./auction.html" class="btn">More details!</a>
                       </div>
                   </div>
                 </div>
@@ -87,7 +87,7 @@
                       <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, dignissimos itaque! Tempora, eum est sint sed minima maiores expedita voluptatum temporibus cum animi voluptatibus modi fuga veritatis doloremque suscipit magnam.</p>
-                        <a href="#" class="btn">Go somewhere</a>
+                        <a href="./auction.html" class="btn">More details!</a>
                       </div>
                   </div>
                 </div>
