--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <section>
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg navbar-fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img class = "logo" src="./FreshBid.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -74,10 +74,14 @@
       </div>
     </section>
      
-    
-
-
+  
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script>
+      window.addEventListener('DOMContentLoaded', (event) => {
+        const navbarHeight = document.querySelector('.navbar').offsetHeight;
+        document.body.style.paddingTop = navbarHeight + 'px';
+      });
+    </script>
   </body>
 </html>
