--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <section>
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img class = "logo" src="./FreshBid.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,22 +44,22 @@
           <div class="carousel-item active">
             <img src="./sayur2.jpg" class="d-block w-100" alt="..." style="opacity: 0.75;">
             <div class="carousel-caption d-flex flex-column align-items-start">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <h5>Expand Your Network!</h5>
+              <p>Our tenant will always ready to answer your needs!</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./sayuir3.jpg" class="d-block w-100" alt="..." style="opacity: 0.75;">
             <div class="carousel-caption d-flex flex-column align-items-start">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <h5>Welcome to FreshBid!</h5>
+              <p>Where your demand meet our expectation!</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./sayur4.jpg" class="d-block w-100" alt="..." style="opacity: 0.75;">
             <div class="carousel-caption d-flex flex-column align-items-start">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <h5 style="text-align: left;">Shop Anywhere You Want!</h5>
+              <p style="text-align: left;">We appreciate your time and hardwork, so don't make shopping for your daily needs become a problem!</p>
             </div>
           </div>
         </div>
