--- a/auction.html
+++ b/auction.html
@@ -25,7 +25,7 @@
                 <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
                 <a class="nav-link" href="./OnAuction.html">On Auction</a>
                 <a class="nav-link" href="#">Catalog</a>
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                <a class="nav-link" href="#"><img src="./shopping-cart-2.png" alt=""></a>
               </div>
             </div>
           </div>
